force-app/main/default/objects/Employee_Leave_Application__c/Employee_Leave_Application__c.object-meta.xml
<CustomObject>
    <label>Employee Leave Application</label>
    <nameField>
        <displayFormat>EL-{00000}</displayFormat>
        <label>Employee Leave Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Leave Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>