force-app/main/default/objects/Employee_Leave_Application__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <summarizedField>Leave_Application__c.End_Date__c</summarizedField>
    <summaryForeignKey>Leave_Application__c.Employee_Leave_Application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>