force-app/main/default/objects/Employee_Leave_Application__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>