force-app/main/default/objects/Employee_Leave_Application__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <label>Number of Days</label>
    <summarizedField>Leave_Application__c.Number_of_Days__c</summarizedField>
    <summaryForeignKey>Leave_Application__c.Employee_Leave_Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>