force-app/main/default/objects/Employee_Leave_Application__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <summarizedField>Leave_Application__c.Start_Date__c</summarizedField>
    <summaryForeignKey>Leave_Application__c.Employee_Leave_Application__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>