force-app/main/default/objects/Employee_Leave_Application__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Number_of_Days__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Leave Applications</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>