force-app/main/default/objects/Employee_Leave_Application__c/listViews/All_Leave_Applications.listView-meta.xml
<ListView>
    <fullName>All_Leave_Applications</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Number_of_Days__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leave Applications</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>